# phomemo-d30

./: .gitignore  Cargo.toml  README.md  flake.nix  module.nix  pkg.nix  pkgs.nix
cli/: Cargo.toml  README.md  flake.nix
cli-preview/: Cargo.toml  README.md
cli-preview/src/: main.rs
cli/src/: main.rs
d30/: Cargo.toml  README.md
d30/src/: lib.rs
example-config/: phomemo-cli-config.toml  phomemo-config.toml
