[workspace]
resolver = "2"
members = ["d30", "cli", "cli-preview"]

package.version = "0.2.3"
package.edition = "2021"
package.license = "AGPL-3.0-or-later"
package.description = "Provisional userspace driver/app for the Phomemo D30 label maker / printer"
package.keywords = ["driver", "hardware"]
package.repository = "https://github.com/crabdancing/phomemo-d30"

[workspace.dependencies]
# IMPORTANT: always bump these when bumping package version
d30 = "0.2.3"

bluetooth-serial-port-async = "0.6.3"
derive_more = "0.99.17"
dimensions = "0.1.0"
image = { version = "0.24.6", features = ["jpeg", "dds"] }
imageproc = "0.23.0"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
serialport = "4.2.1"
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.19"
hex = "0.4.3"
advmac = "1.0.3"
inquire = "0.6.2"
serde = { version = "1.0.178", features = ["derive", "rc"] }
xdg = "2.5.2"
temp-file = "0.1.7"
merge = "0.1.0"
serde_merge = "0.1.3"
png = "0.17.10"
unescape = "0.1.0"
toml = { version = "0.7.6", features = ["indexmap", "preserve_order"] }
indexmap = { version = "2.0.0", features = ["serde"] }
show-image = { version = "0.13.1", features = ["image", "save"] }
snafu = "0.8.0"

[patch.crates-io]
d30 = { path = "./d30" }
