[package]
name = "cli-preview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
image = "0.24.8"
show-image = { version = "0.13.1", features = ["image", "save"] }
snafu = "0.8.0"
