[package]
name = "d30-cli-preview"
description.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
image = "0.24.8"
show-image = { version = "0.13.1", features = ["image", "save"] }
snafu = "0.8.0"
