[package]
name = "d30-cli-preview"
description.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger.workspace = true
image.workspace = true
show-image.workspace = true
snafu.workspace = true
