[package]
name = "d30-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluetooth-serial-port-async = "0.6.3"
derive_more = "0.99.17"
dimensions = "0.1.0"
# hex = "0.4.3"
image = "0.24.6"
imageproc = "0.23.0"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
serialport = "4.2.1"
snafu = "0.7.5"
tokio = { version = "1.29.1", features = ["full"] }
d30 = { path = "../d30" }
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
hex = "0.4.3"
toml = "0.7.6"
advmac = "1.0.3"
temp-file = "0.1.7"
xdg = "2.5.2"
serde = { version = "1.0.180", features = ["derive", "rc"] }
