[package]
name = "d30-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluetooth-serial-port-async = "0.6.3"
derive_more = "0.99.17"
dimensions = "0.1.0"
image = { version = "0.24.6", features = ["jpeg"] }
imageproc = "0.23.0"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
serialport = "4.2.1"
snafu = "0.7.5"
tokio = { version = "1.29.1", features = ["full"] }
d30 = { path = "../d30" }
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
hex = "0.4.3"
toml = "0.7.6"
advmac = "1.0.3"
inquire = "0.6.2"
serde = { version = "1.0.178", features = ["derive", "rc"] }
xdg = "2.5.2"
temp-file = "0.1.7"
# twelf = { version = "0.12.0", features = ["toml"] }
merge = "0.1.0"
serde_merge = "0.1.3"
show-image = { version = "0.13.1", features = ["image"] }
eframe = "0.24.1"
png = "0.17.10"
# layeredconf = "0.2.3"
unescape = "0.1.0"