[package]
name = "d30-cli"
description.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluetooth-serial-port-async.workspace = true
derive_more.workspace = true
dimensions.workspace = true
image.workspace = true
imageproc.workspace = true
rusttype.workspace = true
serialport.workspace = true
snafu.workspace = true
tokio.workspace = true
d30.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
hex.workspace = true
toml.workspace = true
advmac.workspace = true
inquire.workspace = true
serde.workspace = true
xdg.workspace = true
temp-file.workspace = true
merge.workspace = true
serde_merge.workspace = true
png.workspace = true
unescape.workspace = true
