[package]
name = "d30"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
dimensions.workspace = true
bluetooth-serial-port-async.workspace = true
derive_more.workspace = true
image.workspace = true
imageproc.workspace = true
rusttype.workspace = true
serialport.workspace = true
snafu.workspace = true
tokio.workspace = true
toml.workspace = true
serde.workspace = true
xdg.workspace = true
indexmap.workspace = true
advmac.workspace = true
log.workspace = true
env_logger.workspace = true
